--- a/app/src/main/java/com/mahmoudmabrok/androidfoundation/.gitignore
+++ b/app/src/main/java/com/mahmoudmabrok/androidfoundation/.gitignore
@@ -26,7 +26,7 @@ local.properties
 proguard/
 
 # Log Files
-*.log
+.log
 
 # Android Studio Navigation editor temp files
 .navigation/
@@ -36,6 +36,7 @@ captures/
 
 # IntelliJ
 *.iml
+.idea/*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
@@ -44,9 +45,10 @@ captures/
 .idea/libraries
 .idea/caches
 
+
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
-#*.jks
+*.jks
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
